# cawg-trqp-verifier-refimpl

./: .gitignore  AI_USAGE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_RELEASE_TEMPLATE.md  GOVERNANCE.md  Gemfile  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.13.0.md  RELEASE_NOTES_v0.14.0.md  RELEASE_NOTES_v0.15.0.md  RELEASE_NOTES_v0.16.0.md  RELEASE_NOTES_v0.17.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.9.0.md  ROADMAP.md  SECURITY.md  _config.yml  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
_data/: learning_paths.json
_includes/: head_custom.html
api/: openapi.json
benchmarks/: README.md  benchmark_http.py  benchmark_verifier.py  expected-thresholds.yaml  scenarios.yaml
conformance/: assurance-suite-manifest.json  cawg-trqp-readiness-matrix.yaml  compatibility-matrix.json  music-industry-pilot-readiness.yaml  risk-to-test-map.yaml
data/: policies.json  policies_multi_authority.json  repository-metadata.yaml  revocations.json  snapshot.json  snapshot_signing_key.example.pem  trust_anchors.json
docs/: INTEGRATION_GUIDE.md  NON_TECHNICAL_OVERVIEW.md  PRESENTATION_BRIEF.md  api-call-catalogue.md  architecture.md  assurance-suite-ingestion.md  audit-bundle-profile.md  cache-freshness-and-revocation.md  cawg-input-contract.md  cawg-trqp-integration-enablement.md  (+30 more)
(+247 files in other folders)
