[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cawg-trqp-refimpl"
version = "0.4.0"
description = "Reference implementation for CAWG + TRQP integration"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
